--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -1,24 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    color: #fff;
-    &:hover {
-        cursor: pointer;
-    }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    user-select: none;
-}
-
 $football_color: #64dd17;
 $basketball_color: #e65100;
 $tenis_color: #93ff17e8;
@@ -35,6 +14,25 @@ $cut_down_left: polygon(0 0, 1600px 0, 1600px 100%, 0 92%);
     transform: $value;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a {
+    color: #fff;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0 10px 15px;
+    user-select: none;
+}
+
 body {
     position: relative;
     z-index: 0;
@@ -45,11 +43,11 @@ body {
 }
 
 .skew {
+    @include transform(skewX(-15deg));
+
     * {
         @include transform(skewX(15deg));
     }
-
-    @include transform(skewX(-15deg));
 }
 
 .header_sticky {
@@ -70,6 +68,8 @@ nav li {
 }
 
 nav {
+    background-color: transparent;
+
     li {
         a {
             transition: all .3s !important;
@@ -127,14 +127,14 @@ nav {
     max-height: 200px;
 }
 
-.cut_section_right {
+.section_cut-right {
     padding: 30px 0 !important;
-    clip-path: $cut_down_right
+    clip-path: $cut_down_right;
 }
 
-.cut_section_left {
+.section_cut-left {
     padding: 30px 0 !important;
-    clip-path: $cut_down_left
+    clip-path: $cut_down_left;
 }
 
 .pad-bot-sm {
