Компонент Button переписан на функцию, добавлены страница и файл стилей под грид

--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -121,6 +121,10 @@ nav {
     background-color: $contacts_color;
 }
 
+#gallery {
+    background-color: coral;
+}
+
 .card-content {
     overflow: hidden;
     text-overflow: ellipsis;
