--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -181,7 +181,11 @@ nav {
 
 // Карточки
 .card {
+    width: 100%;
+    height: 100%;
+    min-height: 100px;
     position: relative !important;
+    background-color: teal;
 
     &:hover .card-content {
         animation: card-text 0.7s forwards;
